java17化 #18